updated logic and return object to retrieve matches for user in structured wrapper